Исправление: Реализованы корректные методы equals и hashCode в классе DiffEntry; приведен код к стандартам Checkstyle и исправлены ошибки в тестах DifferTest.